<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/activity_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/emmc_name"
        android:textAlignment="center"
        android:textSize="35sp"/>

    <LinearLayout
        android:id="@+id/EMMCLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write"
            android:textColor="@color/violet"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_writeemmc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oriprograss"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:layout_marginStart="20dp"
            android:textSize="30sp"/>

    </LinearLayout>
        <SeekBar
            android:id="@+id/write_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
    <LinearLayout
        android:id="@+id/emmcreadLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read"
            android:textColor="@color/violet"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_reademmc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oriprograss"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:layout_marginStart="20dp"
            android:textSize="30sp"/>
    </LinearLayout>
        <SeekBar
            android:id="@+id/read_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
    <LinearLayout
        android:id="@+id/check_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wait_check"
            android:textColor="@color/red"
            />
    </LinearLayout>
</LinearLayout>
