<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/up_state"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/state_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text=""
                android:textSize="26sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rate_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/up_rate"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/rate_upload_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text=""
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rate_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/down_rate"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/rate_download_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text=""
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/compare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/up_compare"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/compare_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text=""
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BC8F8F" />

        <TextView
            android:id="@+id/title_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_files"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_upload_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/upload"
            android:visibility="gone"/>

            <ListView
                android:id="@+id/listView_upload_files"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/title_local"
                android:divider="#A9A9A9"
                android:dividerHeight="1dp"
                android:footerDividersEnabled="true"
                android:headerDividersEnabled="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BC8F8F" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <TextView
            android:id="@+id/title_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_files"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_download_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/up_update"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/listView_download_files"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/title_server"
            android:divider="#A9A9A9"
            android:dividerHeight="1dp"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true"/>
    </RelativeLayout>
</LinearLayout>
